samples/_failures_safe/1761322205_6400b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16d1971e.c: In function ‘main’:
./samples/SAFE/__tmp_16d1971e.c:156:5: error: expected declaration or statement at end of input
  156 |     char filter_input[20];
      |     ^~~~
